--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 logging.level.org.zalando.logbook = trace
+
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=dbuser
+spring.datasource.password=12345
